--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public"]
 	path = public
-	url = git@github.com:naush/manifesto_public.git
+	url = git@github.com:8thlight/manifesto_public.git
